fix alignment for occupation

--- a/imports/ui/components/search/search.scss
+++ b/imports/ui/components/search/search.scss
@@ -6,6 +6,7 @@
 	.cardInfoSmall {
 		a {
 			margin: 0;
+			display: table !important;
 		}
 	}
 
